# contextual.nvim

./: .gitignore  LICENSE  readme.md
contextual_backend/: Cargo.toml
contextual_backend/src/: args.rs  handlers.rs  jsonrpc.rs  lib.rs  main.rs  router.rs  service.rs  types.rs
contextual_backend/src/database/: file.rs  mod.rs
contextual_backend/src/handlers/: echo.rs  mod.rs  todo.rs
contextual_backend/src/transport/: codec.rs  mod.rs  stdio.rs  tcp.rs  unix_socket.rs
contextual_backend/src/types/: mod.rs  note.rs  todo.rs
lua/contextual/: init.lua  jsonrpc.lua
plugin/: contextual.lua
