[package]
name = "contextual_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.32", features = ["derive"] }
dirs = "6.0.0"
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.44.0", features = ["io-std", "io-util", "macros", "net", "rt-multi-thread"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
